-> Prevent backdrop from shifting page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4026,6 +4026,10 @@ form.login hr {
   margin-top: 10px;
 }
 
+#save-cohort-modal .modal-backdrop {
+  padding-right: 0; !important
+}
+
 #sign-in ul.errorlist, #sign-up ul.errorlist, #password-change ul.errorlist {
   padding: 5px;
   border: 3px solid #f6441a;
